modal on iphone fix

--- a/assets/templates/default/css/_modals.less
+++ b/assets/templates/default/css/_modals.less
@@ -68,6 +68,10 @@ body.modal-open {
 
 
     @media (max-width: 543px) {
+        .modal:before {
+            vertical-align: top;
+        }
+
         .modal-dialog {
             max-width: 90%;
         }
